--- a/src/SCSS/_videoscontainer.scss
+++ b/src/SCSS/_videoscontainer.scss
@@ -1,3 +1,8 @@
 .videocontainer{
     display: flex;
+    padding: 24px;
+    justify-content: space-between;
+    width: 100%;
+    flex-wrap: wrap;
 }
+
