--- a/src/SCSS/_sidebar.scss
+++ b/src/SCSS/_sidebar.scss
@@ -3,6 +3,8 @@
     display: flex;
     flex-direction: column;
     background-color: #ffffff;
+    position: sticky;
+    top: 56px;
     hr{
         margin: 12px 0;
         border-top:1px solid #e5e5e5;
