--- a/src/SCSS/_navbar.scss
+++ b/src/SCSS/_navbar.scss
@@ -1,3 +1,5 @@
+$information-phone: "only screen and (max-width : 480px)";
+
 .navbar{
     display: flex;
     height: 56px;
@@ -18,12 +20,26 @@
         display: flex;
         align-items: center;
     }
+    .navbar__left--right{
+        display: flex;
+        align-items: center;
+        h2{
+            @media #{$information-phone} {
+                display: none;
+            }
+        }
+    }
+
 }
 .navbar__middle{
     display: flex;
     height: 32px;
 
     flex: 0.5;
+    @media #{$information-phone} {
+        flex: auto;
+        flex-direction: row-reverse
+    }
     div{
         display: flex;
         border: 1px solid #d3d3d3;
@@ -31,6 +47,10 @@
         justify-content: center;
         background-color: #f8f8f8;
         width: 65px;
+        @media #{$information-phone} {
+            border: none;
+            background-color: transparent;
+        }
     }
     input{
         line-height: 24px;
@@ -41,6 +61,9 @@
         &:focus{
             border: 1px solid #e9e9e9;
         }
+        @media #{$information-phone} {
+            display: none;
+        }
     }
 }
 
@@ -49,4 +72,9 @@
     flex : 0.2;
     align-items: center;
     justify-content: space-around;
+    .MuiSvgIcon-root{
+        @media #{$information-phone} {
+            display: none;
+        }
+    }
 }
