--- a/src/SCSS/_videoscontainer.scss
+++ b/src/SCSS/_videoscontainer.scss
@@ -1,8 +1,16 @@
+$information-phone: "only screen and (max-width : 480px)";
 .videocontainer{
     display: flex;
     padding: 24px;
     justify-content: space-between;
     width: 100%;
     flex-wrap: wrap;
+    @media #{$information-phone} {
+        width: 100vw;
+        flex-wrap: wrap;
+        z-index: -1;
+        padding: 0px;
+    }
 }
+
 
