--- a/src/SCSS/style.css
+++ b/src/SCSS/style.css
@@ -38,6 +38,21 @@
           align-items: center;
 }
 
+.navbar__left .navbar__left--right {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+@media only screen and (max-width: 480px) {
+  .navbar__left .navbar__left--right h2 {
+    display: none;
+  }
+}
+
 .navbar__middle {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -46,6 +61,18 @@
   -webkit-box-flex: 0.5;
       -ms-flex: 0.5;
           flex: 0.5;
+}
+
+@media only screen and (max-width: 480px) {
+  .navbar__middle {
+    -webkit-box-flex: 1;
+        -ms-flex: auto;
+            flex: auto;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: row-reverse;
+            flex-direction: row-reverse;
+  }
 }
 
 .navbar__middle div {
@@ -63,6 +90,13 @@
   width: 65px;
 }
 
+@media only screen and (max-width: 480px) {
+  .navbar__middle div {
+    border: none;
+    background-color: transparent;
+  }
+}
+
 .navbar__middle input {
   line-height: 24px;
   font-size: 16px;
@@ -73,6 +107,12 @@
 
 .navbar__middle input:focus {
   border: 1px solid #e9e9e9;
+}
+
+@media only screen and (max-width: 480px) {
+  .navbar__middle input {
+    display: none;
+  }
 }
 
 .navbar__right {
@@ -87,6 +127,12 @@
           align-items: center;
   -ms-flex-pack: distribute;
       justify-content: space-around;
+}
+
+@media only screen and (max-width: 480px) {
+  .navbar__right .MuiSvgIcon-root {
+    display: none;
+  }
 }
 
 .maincomponent {
@@ -115,6 +161,25 @@
   border-top: 1px solid #e5e5e5;
 }
 
+@media only screen and (max-width: 480px) {
+  .sidebar {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    position: absolute;
+    width: 100vw;
+    overflow-y: hidden;
+    position: fixed;
+    bottom: 0px;
+    top: auto;
+    height: 60px;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+}
+
 .sidebar__item {
   height: 40px;
   display: -webkit-box;
@@ -132,6 +197,23 @@
 
 .sidebar__item:hover {
   background-color: #f2f2f2;
+}
+
+@media only screen and (max-width: 480px) {
+  .sidebar__item {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    height: auto;
+    padding-top: 10px;
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  .sidebar__additional {
+    display: none;
+  }
 }
 
 .sidebar__item--active {
@@ -157,6 +239,16 @@
       flex-wrap: wrap;
 }
 
+@media only screen and (max-width: 480px) {
+  .videocontainer {
+    width: 100vw;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    z-index: -1;
+    padding: 0px;
+  }
+}
+
 .videocard {
   width: 253px;
   margin: 0 8px 40px 8px;
@@ -166,6 +258,12 @@
   width: 100%;
   -o-object-fit: contain;
      object-fit: contain;
+}
+
+@media only screen and (max-width: 480px) {
+  .videocard {
+    width: auto;
+  }
 }
 
 .videoCard__infoContainer--avatar {
